--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "mock": "json-server -w db.json -p 4200",
+    "serve": "concurrently \"npm run dev\" \"npm run mock\""
   },
   "dependencies": {
     "next": "9.4.4",
+    "nextjs-progressbar": "0.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.19",
+    "@types/react": "^16.9.41",
+    "concurrently": "^5.2.0",
+    "typescript": "^3.9.6"
   }
 }
